--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gpt3",
+  "name": "AplhaXDR",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "edit-package-json": "^0.7.2",
     "emailjs": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^4.0.3",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.6",
