--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "emailjs": "^4.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^4.0.3",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.6",
