--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^12.1.10",
     "edit-package-json": "^0.7.2",
     "emailjs": "^4.0.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.4.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
     "reactjs-popup": "^2.0.5",
+    "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
