--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reactjs-popup": "^2.0.5",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
+    "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
